# crm

./: .editorconfig  .gitignore  CLAUDE.md  README.md  docker-compose.yml  scaffold.sh
backend/: .env.example  README.md  conftest.py  pyproject.toml  requirements.txt
backend/apps/accounts/: backends.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_refreshtokenfamily_refreshtokenlineage_and_more.py
backend/apps/accounts/tests/: factories.py  test_models.py  test_views.py
backend/apps/activities/: filters.py  models.py  pagination.py  serializers.py  views.py
backend/apps/activities/migrations/: 0001_initial.py
backend/apps/activities/tests/: factories.py  test_serializers.py  test_views.py
backend/apps/companies/: admin.py  filters.py  models.py  pagination.py  serializers.py  urls.py  views.py
backend/apps/companies/migrations/: 0001_initial.py
backend/apps/companies/tests/: factories.py  test_models.py  test_views.py
backend/apps/contacts/: admin.py  apps.py  filters.py  models.py  pagination.py  serializers.py  signals.py  urls.py  views.py
backend/apps/contacts/migrations/: 0001_initial.py
backend/apps/contacts/tests/: factories.py  test_signals.py  test_views.py
backend/apps/core/: models.py
backend/apps/deals/: filters.py  models.py  pagination.py  serializers.py  views.py
backend/apps/deals/migrations/: 0001_initial.py  (+1 more)
backend/apps/leads/: admin.py  filters.py  models.py  pagination.py  serializers.py  services.py  urls.py  views.py
backend/crm/: settings.py  urls.py
(+183 files in other folders)
